{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 10,
  "lineage": "7643f906-9ce4-35d1-0a17-f390cfa64b1c",
  "resources": [
    {
      "module": "module.gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a19075ece27ac49",
            "arn": "arn:aws:ec2:us-east-1:474829115013:elastic-ip/eipalloc-04a19075ece27ac49",
            "association_id": "eipassoc-0bf804aeb896080ff",
            "domain": "vpc",
            "id": "eipalloc-04a19075ece27ac49",
            "instance": "i-01fb9e88aabba7382",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c87430a3f6c2dbd2",
            "private_dns": "ip-10-0-1-49.ec2.internal",
            "private_ip": "10.0.1.49",
            "public_dns": "ec2-100-52-22-97.compute-1.amazonaws.com",
            "public_ip": "100.52.22.97",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "dermatech-qa-eip"
            },
            "tags_all": {
              "Name": "dermatech-qa-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.gateway",
      "mode": "managed",
      "type": "aws_instance",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-051f7e7f6c2f40dc1",
            "arn": "arn:aws:ec2:us-east-1:474829115013:instance/i-0843f8005dcadeba4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0843f8005dcadeba4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-068e9fe67c786b70e"
              }
            ],
            "primary_network_interface_id": "eni-068e9fe67c786b70e",
            "private_dns": "ip-10-0-1-59.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.59",
            "public_dns": "ec2-18-233-156-204.compute-1.amazonaws.com",
            "public_ip": "18.233.156.204",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0da985db63dfce82d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ef80a518d8dadd24",
            "tags": {
              "Name": "dermatech-qa-gateway"
            },
            "tags_all": {
              "Name": "dermatech-qa-gateway"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07184e2495f67869d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "474829115013",
            "id": "i-0843f8005dcadeba4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.gateway.aws_security_group.gateway_sg",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.gateway",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gateway_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474829115013:security-group/sg-07184e2495f67869d",
            "description": "Security group for API Gateway Nginx",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07184e2495f67869d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dermatech-qa-gateway-sg",
            "name_prefix": "",
            "owner_id": "474829115013",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05526d42bd060fe7b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "474829115013",
            "id": "sg-07184e2495f67869d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474829115013:internet-gateway/igw-0b2767015d67a5980",
            "id": "igw-0b2767015d67a5980",
            "owner_id": "474829115013",
            "region": "us-east-1",
            "tags": {
              "Name": "dermatech-qa-igw"
            },
            "tags_all": {
              "Name": "dermatech-qa-igw"
            },
            "vpc_id": "vpc-05526d42bd060fe7b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474829115013:route-table/rtb-0cc2aee1c93f4e6f9",
            "id": "rtb-0cc2aee1c93f4e6f9",
            "owner_id": "474829115013",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b2767015d67a5980",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dermatech-qa-public-rt"
            },
            "tags_all": {
              "Name": "dermatech-qa-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05526d42bd060fe7b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "474829115013",
            "id": "rtb-0cc2aee1c93f4e6f9",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e848411035ed7f7e",
            "region": "us-east-1",
            "route_table_id": "rtb-0cc2aee1c93f4e6f9",
            "subnet_id": "subnet-0ef80a518d8dadd24"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474829115013:subnet/subnet-0ef80a518d8dadd24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef80a518d8dadd24",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "474829115013",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dermatech-qa-public-subnet"
            },
            "tags_all": {
              "Name": "dermatech-qa-public-subnet"
            },
            "vpc_id": "vpc-05526d42bd060fe7b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "474829115013",
            "id": "subnet-0ef80a518d8dadd24",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474829115013:vpc/vpc-05526d42bd060fe7b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01b0cc895902c6cd7",
            "default_route_table_id": "rtb-0c29237c7ce5767d5",
            "default_security_group_id": "sg-0407a027573a4c777",
            "dhcp_options_id": "dopt-011b55a8389da3406",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05526d42bd060fe7b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c29237c7ce5767d5",
            "owner_id": "474829115013",
            "region": "us-east-1",
            "tags": {
              "Environment": "qa",
              "Name": "dermatech-qa-vpc"
            },
            "tags_all": {
              "Environment": "qa",
              "Name": "dermatech-qa-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "474829115013",
            "id": "vpc-05526d42bd060fe7b",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}